--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/gmarik/Vundle.vim.git
 [submodule "comm/vim/vim/bundle/c.vim"]
 	path = comm/vim/vim/bundle/c.vim
-	url = https://github.com/firemiles/c.vim
+	url = https://github.com/firemiles/c.vim.git
